<resources>
    <string name="app_name">X \'n O</string>
    <string name="title_activity_statistics">Statistics</string>

    <string name="games_played">Games Played</string>
    <string name="reset">Reset</string>

    <string name="player_number">Team</string>
    <string name="games_won">Games\nWon</string>
    <string name="percent_won">Percent\nWon</string>
    <string name="title_activity_settings">Settings</string>
    <string name="team_x">Team X:</string>
    <string name="team_o">Team 0:</string>
    <string name="team_x_score">0</string>
    <string name="team_o_score">0</string>


    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="view_statistics">View Statistics</string>
    <string name="reset_statistics">Reset Statistics</string>

    <!-- Preference Titles -->
    <string name="display_header">Display</string>
    <string name="game_header">Game</string>


    <!-- Preferences -->
    <string name="night_mode_key">Night Mode</string>
    <string name="night_mode_title">Night/Dark Mode</string>
    <string name="night_mode_off">Never use Night/Dark Mode</string>
    <string name="night_mode_on">Use Night/Dark Mode (unless disabled in OS Settings)</string>
    <string name="win_on_last_pick_key">Win on Last Pick</string>
    <string name="win_on_last_pick_title">Win on Last Pick</string>
    <string name="win_on_last_pick_on">Last player to pick is not the winner</string>
    <string name="win_on_last_pick_off">Last player to pick is the winner</string>
    <string name="auto_save_key">Auto-Save</string>
    <string name="auto_save_off">On exit, the game in progress will not be saved</string>
    <string name="auto_save_on">On exit, the game in progress will be saved</string>
    <string name="auto_save_title">Auto-Save Game on Exit</string>

</resources>